--- a/class-00/lab-c/starter-code-lab-00c/styles/layout.css
+++ b/class-00/lab-c/starter-code-lab-00c/styles/layout.css
@@ -3,24 +3,50 @@ nav {
   margin-top: 25px;
 }
 
-/*layout*/
-#logo {
-  float: left;
-  padding-bottom: 25px;
-  color: black;
-  text-decoration: none;
+/*base*/
+nav, article, aside, footer section {
+  margin: 0 auto;
+  width: 900px;
 }
 
 /*layout*/
-#logo img {
+main p {
+  text-indent: 30px;
+  margin: 20px 0px;
+}
+
+/*layout*/
+aside h3 {
+  padding-left: 100px;
+  padding-bottom: 10px;
+}
+
+/*layout*/
+hr {
+  height: 13px;
+}
+
+/*layout*/
+aside button {
+  padding: 15px 40px;
+}
+
+/*layout*/
+aside {
+  padding-top: 30px;
+  padding-bottom: 60px
+}
+
+/*layout*/
+aside img {
   float: left;
 }
 
 /*layout*/
-#logo h1 {
-  padding-left: 50px;
-  font-family: 'Yellowtail', cursive;
-  font-size: 2.4em;
+aside p {
+  padding-left: 100px;
+  width: 65%;
+  margin: 0;
 }
 
 /*layout*/
@@ -41,7 +67,6 @@ nav li {
 
 /*layout*/
 .print {
-  text-decoration: none;
   padding-left: 30px;
   float: right;
 }
@@ -52,30 +77,43 @@ nav li {
 }
 
 /*layout*/
+.print, .date {
+  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 33px;
+}
+
+/*layout*/
 .recipe li {
   float: left;
   width: 40%;
-  font-size: 1.3em;
-  line-height: 31px;
 }
 
 /*layout*/
-aside {
-  padding-top: 30px;
-  padding-bottom: 60px
+.recipe {
+  height: 260px;
+  padding: 37px 0 0 60px;
+  margin: 40px 0;
 }
 
 /*layout*/
-aside img {
+#logo {
+  float: left;
+  padding-bottom: 25px;
+}
+
+/*layout*/
+#logo img {
   float: left;
 }
 
 /*layout*/
-aside p {
-  padding-left: 100px;
-  width: 65%;
-  margin: 0;
-  text-indent: 0;
-
+#logo h1 {
+  padding-left: 50px;
 }
 
+/*layout*/
+#slogan {
+  width: 250px;
+  padding-left: 55px;
+}
