--- a/class-00/lab-c/starter-code-lab-00c/styles/modules.css
+++ b/class-00/lab-c/starter-code-lab-00c/styles/modules.css
@@ -1,7 +1,38 @@
 /*module*/
+.print {
+  text-decoration: none;
+}
+
+/*module*/
+.print, .date {
+  color: #a9a8a5;
+  font-family: 'Abel', sans-serif;
+  font-size: .8em;
+  text-transform: uppercase;
+}
+
+/*module*/
+.recipe {
+  letter-spacing: .1em;
+  font-family: 'Patrick Hand', cursive;
+  color: #666a42;
+  background-image: url("img/list-bg.png");
+}
+
+/*module*/
+.recipe li {
+  font-size: 1.3em;
+  line-height: 31px;
+}
+
+/*module*/
+#logo {
+  color: black;
+  text-decoration: none;
+}
+
+/*module*/
 #slogan {
-  width: 250px;
-  padding-left: 55px;
   color: #a3a4a2;
   font-family: 'Abel', sans-serif;
   font-size: .65em;
@@ -9,33 +40,7 @@
 }
 
 /*module*/
-hr {
-  clear: both;
-  border: 0;
-  height: 13px;
-  background-image: url('../img/hr.png');
+#logo h1 {
+  font-family: 'Yellowtail', cursive;
+  font-size: 2.4em;
 }
-
-
-/*module*/
-.print, .date {
-  color: #a9a8a5;
-  font-family: 'Abel', sans-serif;
-  font-size: .8em;
-  margin: 0;
-  text-transform: uppercase;
-  margin-top: 10px;
-  margin-bottom: 33px;
-}
-
-/*module/layout*/
-.recipe {
-  letter-spacing: .1em;
-  font-family: 'Patrick Hand', cursive;
-  color: #666a42;
-  background-image: url("img/list-bg.png");
-  height: 260px;
-  padding: 37px 0 0 60px;
-  margin: 40px 0;
-}
-
